--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>[Your Name Here]'s Bouncing balls</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
 
-  <body>
-    <h1>bouncing balls</h1>
+<head>
+    <meta charset="utf-8">
+    <title>Christopher Martinez's Bouncing balls</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <h1>bouncing balls :3</h1>
     <canvas></canvas>
 
     <script src="main.js"></script>
-  </body>
+</body>
+
 </html>
